# agentself

./: .gitignore  AGENTS.md  README.md  TUTORIAL.md  mcp.json  pyproject.toml
.agent/commands/: prime.md
.beads/: config.yaml
.claude/: settings.local.json
.specs/00 Bootstrap/: 2026-01-11 Self Modify Part 2.md  Agent Architecture Research and Design.md  CODING_AGENT_CAPABILITY_PLAN.md  Design.md  SELF_IMPROVING_AGENT_IDEAS.md  Self Managed Context.md  Which Language.md
.specs/01 Bootstrap REPL/: Specification.md
.specs/01 Core and Capabilities/: Core and Capabilities.md
.specs/2026-01-09 Bootstrap/: SELF_IMPROVING_AGENT_IDEAS.md
_tmp/safe_root/: README.txt  notes.txt
docs/: INDEX.md  MULTIPLE AGENT CONFIGURATION.md  OPEN_ISSUES.md  gemini_cli_token_learnings.md
docs/decisions/: 0001-skill-registry-roots.md  0002-skills-readonly-access.md  0003-safe-harness-logging.md  0004-command-line-path-args.md  0005-mcp-config-autoinstall.md  0006-harness-paths-and-attach-ux.md  0007-single-file-skills.md
docs/runbooks/: safe-harness.md
docs/session/: 2026-01-13-harness-skills-mcp.md
docs/sessions/: 2026-01-13-harness-skills-mcp.md  2026-01-14-harness-attach-ux.md
docs/specs/: agent-architecture.md  language-selection.md  self-modification.md
docs/specs/2025-12-25 Original/: bootstrap-repl.md  self-managed-context.md
docs/specs/2026-01-25 Research/: Arxiv MIT RLMs Paper.md  Markdown from GDocs.md  References.md  research_questions.md
docs/specs/2026-01-28 Research/: 2026-01-26 composable_repl_agents_design.md  2026-01-27 deep_research_gemini_1.md  2026-01-28 deep_research_nblm.md
docs/usage/: capabilities.md  harness.md  mcp.md  skills.md
scripts/: attach-repl.sh  harness-logs.sh  harness-start.sh  harness-stop.sh  run-harness.sh  run-safe-harness.sh  sync-agent-skills.sh
skills/: README.md  docs-update.md
skills/harness-debugging/: SKILL.md
skills/safe-harness/: SKILL.md
src/agentself/: __init__.py  agent.py  cli.py  core.py  generator.py  paths.py  permissions.py  proxy.py  sandbox.py  skills.py  skills_cli.py  tracker.py
src/agentself/_archive/: __init__.py
src/agentself/capabilities/: __init__.py  base.py  command_line.py  core_source.py  file_system.py  path_guard.py  self_source.py  (+2 more)
tests/: __init__.py  test_agent.py  test_capabilities.py  test_core.py  test_generator.py  test_harness.py  test_mcp_config.py  test_sandbox.py  test_skills.py  test_tracker.py
tests/_archive/: test_agent.py  test_permissions.py  test_proxy.py
(+16 files in other folders)
