[project]
name = "agentself"
version = "0.1.0"
description = "A self-improving coding agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
]

[project.scripts]
agentself = "agentself.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentself"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.uv]
managed = true

[tool.pytest.ini_options]
testpaths = ["tests"]
