[project]
name = "agentself"
version = "0.2.0"
description = "A capability-based REPL for coding agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "mcp>=1.0.0",
    "dill>=0.3.0",
    "prompt_toolkit>=3.0.0",
]

[project.scripts]
agentself = "agentself.harness:main"
agentself-attach = "agentself.harness.attach:main"
run-harness = "agentself.cli:run_harness_main"
attach-repl = "agentself.cli:attach_repl_main"
sync-agent-skills = "agentself.cli:sync_agent_skills_main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentself"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.uv]
managed = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tests/_archive"]
